# operator-mappings-api

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  dockerfile
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
helm/templates/tests/: test-connection.yaml
resources/: api.yaml  data.json
src/: lib.rs  main.rs
src/app_state/: loaders.rs  mod.rs  model.rs  persistence.rs
src/handlers/: create.rs  delete.rs  find_roaming_partners.rs  get_operators_by_e212_count.rs  group_operators_by_iso3.rs  mod.rs  network_names.rs  read.rs  swagger.rs  update.rs
src/operators/: find_roaming_partners.rs  get_operators_by_e212_count.rs  group_operators_by_iso3.rs  mod.rs  network_names.rs
src/operators/crud_operations/: create.rs  delete.rs  read.rs  update.rs
src/utils/: config.rs  error_responses.rs  mod.rs  models.rs  routes.rs  validations.rs
tests/: create.rs  delete.rs  integration.rs  network_names.rs  operators_by_e212_count.rs  operators_grouped_by_iso3.rs  read.rs  roaming_partners.rs  sample_data.json  update.rs
