[package]
name = "operator_mappings_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-http = "3.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
once_cell     = "1.18.0"
csv = "1.1"
actix-files = "0.6"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web", "vendored"] }
serde_yaml = "0.9"
reqwest = { version = "0.12.20", features = ["json"] }
chrono = "0.4.41"
actix-cors = "0.6"
